# VALOR-IVX

./: .editorconfig  .eslintrc.cjs  .gitignore  DESIGN_IMPLEMENTATION_GUIDE.md  DESIGN_REVIEW_JOHNNY_IVE_PHILOSOPHY.md  FEATURES.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  PHASE9_DOCUMENTATION.md  PHASES_1_TO_10_DETAILED_SUMMARY.md  PHASE_10_FINAL_COMPLETION.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_DETAILED_PLAN.md  PHASE_2_IMPLEMENTATION_ROADMAP.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_4_8_COMPLETION_SUMMARY.md  PHASE_5A_COMPLETION_SUMMARY.md  PHASE_5B_5C_5D_COMPLETION_SUMMARY.md  PHASE_5_ADVANCED_FINANCIAL_MODELS_PLAN.md  PHASE_5_COMPLETION.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_5_FINAL_COMPLETION_SUMMARY.md  PHASE_5_IMPLEMENTATION_ROADMAP.md  PHASE_5_SUMMARY.md  PHASE_6_COMPLETION.md  PHASE_6_STARTUP_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_COMPLETION.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_7_FINAL_COMPLETION.md  PHASE_7_STARTUP_SUMMARY.md  PHASE_8_ADVANCED_ANALYTICS_AND_ENTERPRISE_FEATURES_PLAN.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_9_10_COMPLETION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  STARTUP_GUIDE.md  STATUS_REPORT.md  (+39 more)
.github/: dependabot.yml
backend/: .env.example  .env.production  Dockerfile  README.md  ai_insights_engine.py  alembic.ini  analytics_engine.py  app.py  app_logging.py  auth.py  cache.py  config.py  db_enterprise.py  docker-compose.yml  financial_data.py  gunicorn.conf.py  metrics.py  monitoring.py  production_config.py  rate_limiter.py  requirements-dev.txt  run.py  (+7 more)
(+120 files in other folders)
