[tool.black]
line-length = 100
target-version = ["py311"]
include = 'backend/'

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]
extend-select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':'
]
exclude = [
  "backend/instance",
  "backend/tests",
]

[tool.ruff.isort]
known-first-party = ["backend"]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
